[package]
description = "Tetsy Vapory Chain Specification"
name = "chainspec"
version = "0.1.0"
authors = ["Marek Kotewicz <marek@parity.io>"]
license = "GPL-3.0"
documentation = "https://docs.rs/macros"
homepage = "https://github.com/openvapory/tetsy-vapory"
repository = "https://github.com/openvapory/tetsy-vapory"

[dependencies]
vapjson = { path = "../json" }
serde_json = "1.0"
