[package]
description = "Tetsy Vapory Chain Specification"
name = "chainspec"
version = "0.1.0"
authors = ["Marek Kotewicz <marek@parity.io>", "Parity Technologies <admin@parity.io>", "Tetcoin Developers <support@tetcoin.org>"]
license = "GPL-3.0"
documentation = "https://docs.rs/chainspec"
homepage = "https://github.com/openvapory/tetsy-vapory"
repository = "https://github.com/openvapory/tetsy-vapory"

[dependencies]
vapjson = { version = "0.1.0", path = "../json" }
serde_json = "1.0"
