[package]
description = "Tetsy Vapory (VapCore) Secret Store"
name = "vapcore-secretstore"
version = "1.0.0"
license = "GPL-3.0"
authors = ["Parity Technologies <admin@parity.io>"]
documentation = "https://docs.rs/vapkey"
homepage = "https://github.com/openvapory/tetsy-vapory"
repository = "https://github.com/openvapory/tetsy-vapory"

[dependencies]
byteorder = "1.0"
vapabi = "9.0.1"
vapabi-contract = "9.0.0"
vapabi-derive = "9.0.1"
vapory-types = "0.8.0"
vapkey = { version = "0.4.0", path = "../accounts/vapkey", optional = true }
futures = "0.1"
hyper = { version = "0.12", default-features = false }
tetsy-keccak-hash = "0.4.0"
tetsy-kvdb = "0.3.2"
tetsy-kvdb-rocksdb = "0.4.3"
lazy_static = "1.0"
log = "0.4"
tetsy-bytes = "0.1"
tetsy-crypto = { version = "0.4.2", features = ["publickey"] }
tetsy-runtime = { path = "../util/runtime" }
parking_lot = "0.9"
percent-encoding = "2.1.0"
rustc-hex = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tiny-keccak = "1.4"
tokio = "0.1.22"
tokio-io = "0.1"
tokio-service = "0.1"
url = "2.1.0"
tetsy-jsonrpc-server-utils = "14.2.1"

[dev-dependencies]
env_logger = "0.5"
tempdir = "0.3"
tetsy-kvdb-rocksdb = "0.4.3"

