[package]
description = "Tetsy Updater Service."
name = "tetsy-updater"
version = "1.12.0"
license = "GPL-3.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
client-traits = { path = "../vapcore/client-traits" }
common-types = { path = "../vapcore/types" }
vapabi = "9.0.1"
vapabi-contract = "9.0.0"
vapabi-derive = "9.0.1"
vapcore = { path = "../vapcore" }
vapcore-sync = { path = "../vapcore/sync" }
vapory-types = "0.8.0"
tetsy-keccak-hash = "0.4.0"
lazy_static = "1.0"
log = "0.4"
tetsy-bytes = "0.1"
tetsy-hash-fetch = { path = "hash-fetch" }
tetsy-path = "0.1"
tetsy-version = { path = "../util/version" }
rand = "0.7"
parking_lot = "0.9"
semver = "0.9"
target_info = "0.1"

[dev-dependencies]
vapcore = { path = "../vapcore", features = ["test-helpers"] }
tempdir = "0.3"
matches = "0.1"

[features]
# hardcode version number 1.3.7 of parity to force an update
# in order to manually test that parity fall-over to the local version
# in case of invalid or deprecated command line arguments are entered
test-updater = []
