[package]
description = "Tetsy Updater Service."
name = "tetsy-updater"
version = "1.12.0"
edition = "2018"
license = "GPL-3.0"
authors = ["Parity Technologies <admin@parity.io>", "Tetcoin Developers <support@tetcoin.org>"]
documentation = "https://docs.rs/tetsy-updater"
homepage = "https://github.com/openvapory/tetsy-vapory"
repository = "https://github.com/openvapory/tetsy-vapory"

[dependencies]
client-traits = { version = "0.1.0", path = "../vapcore/client-traits" }
common-types = { version = "0.1.0", path = "../vapcore/types" }
vapabi = "9.0.1"
vapabi-contract = "9.0.0"
vapabi-derive = "9.0.1"
vapcore = { version = "1.12.1", path = "../vapcore" }
vapcore-sync = { version = "1.12.0", path = "../vapcore/sync" }
vapory-types = "0.8.0"
tetsy-keccak-hash = "0.4.0"
lazy_static = "1.0"
log = "0.4"
tetsy-bytes = "0.1"
tetsy-hash-fetch = { version = "1.12.0", path = "hash-fetch" }
tetsy-path = "0.1"
tetsy-version = { version = "2.7.2", path = "../util/version" }
rand = "0.7"
parking_lot = "0.9"
semver = "0.9"
target_info = "0.1"

[dev-dependencies]
vapcore = { version = "1.12.1", path = "../vapcore", features = ["test-helpers"] }
tempdir = "0.3"
matches = "0.1"

[features]
# hardcode version number 1.3.7 of tetsy to force an update
# in order to manually test that tetsy fall-over to the local version
# in case of invalid or deprecated command line arguments are entered
test-updater = []
