[package]
description = "Tetsy VVM Implementation"
name = "vvmbin"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>", "Tetcoin Developers <support@tetcoin.org>"]
edition = "2018"

[[bin]]
name = "tetsy-vvm"
path = "./src/main.rs"

[dependencies]
account-state = { version = "0.1.0", path = "../vapcore/account-state" }
common-types = { version = "0.1.0", path = "../vapcore/types", features = ["test-helpers"] }
docopt = "1.0"
env_logger = "0.5"
vapcore = { version = "1.12.0", path = "../vapcore", features = ["test-helpers", "json-tests"] }
vapory-types = "0.8.0"
vapjson = { version = "0.1.0", path = "../json", features = ["test-helpers"] }
vvm = { version = "0.1.0", path = "../vapcore/vvm" }
panic-hook = { version = "0.1.0", path = "../util/panic-hook" }
tetsy-bytes = "0.1"
vapcore-pod = { version = "0.1.0", path = "../vapcore/pod" }
rustc-hex = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
vapcore-spec = { version = "0.1.0", path = "../vapcore/spec" }
vapcore-trace = { version = "0.1.0", path = "../vapcore/trace" }
tetsy-vm = { version = "0.1.0", path = "../vapcore/vm" }

[dev-dependencies]
criterion = "0.3"
tempdir = "0.3"

[features]
vvm-debug = ["vapcore/vvm-debug-tests"]

[[bench]]
name = "mod"
harness = false
