[package]
description = "Tetsy Vapory RPC Client"
homepage = "http://tetcoin.org"
license = "GPL-3.0"
name = "tetsy-rpc-client"
version = "1.4.0"
authors = ["Parity <admin@parity.io>"]

[dependencies]
vapory-types = "0.8.0"
futures = "0.1"
log = "0.4"
serde = "1.0"
serde_json = "1.0"
url = "2.1.0"
matches = "0.1"
parking_lot = "0.9"
jsonrpc-core = "14.0.3"
jsonrpc-ws-server = "14.0.3"
tetsy-rpc = { path = "../../rpc" }
tetsy-keccak-hash = "0.4.0"
