[package]
description = "Tetsy Vapory RPC Client"
license = "GPL-3.0"
name = "rpc-client"
version = "1.4.0"
authors = ["Parity Technologies <admin@parity.io>", "Tetcoin Developers <support@tetcoin.org>"]
edition = "2018"
documentation = "https://docs.rs/rpc-client"
homepage = "https://github.com/openvapory/tetsy-vapory"
repository = "https://github.com/openvapory/tetsy-vapory"

[dependencies]
vapory-types = "0.8.0"
futures = "0.1"
log = "0.4"
serde = "1.0"
serde_json = "1.0"
url = "2.1.0"
matches = "0.1"
parking_lot = "0.9"
tetsy-jsonrpc-core = "14.2.1"
tetsy-jsonrpc-ws-server = "14.2.1"
tetsy-rpc = { path = "../../rpc" }
tetsy-keccak-hash = "0.4.0"
