[package]
name = "tetsy-local-store"
description = "Manages persistent local node data."
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
common-types = { version = "0.1.0", path = "../../vapcore/types" }
vapcore-io = { version = "1.12.0", path = "../../util/io" }
tetsy-kvdb = "0.3.2"
# tetsy-kvdb = { git = "https://github.com/tetcoin/tetsy-common", rev = "5b2e347" }
log = "0.4"
tetsy-rlp = "0.4.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dev-dependencies]
vapkey = { path = "../../accounts/vapkey" }
tetsy-crypto = { version = "0.4.2", features = ["publickey"] }
tetsy-kvdb-memorydb = "0.3.2"
# tetsy-kvdb-memorydb = { git = "https://github.com/tetcoin/tetsy-common", rev = "5b2e347" }
