[package]
description = "Fetch current VAP price"
homepage = "http://tetcoin.org"
license = "GPL-3.0"
name = "price-info"
version = "1.12.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
tetsy-fetch = { version = "0.1.0", path = "../../util/fetch" }
futures = "0.1"
log = "0.4"
tetsy-runtime = { path = "../../util/runtime" }
serde_json = "1.0"

[dev-dependencies]
fake-fetch = { path = "../../util/fake-fetch" }
