[package]
description = "Fetch current VAP price"
license = "GPL-3.0"
name = "price-info"
version = "1.12.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
documentation = "https://docs.rs/price-info"
homepage = "https://github.com/openvapory/tetsy-vapory"
repository = "https://github.com/openvapory/tetsy-vapory"

[dependencies]
tetsy-fetch = { version = "0.1.0", path = "../../util/fetch" }
futures = "0.1"
log = "0.4"
tetsy-runtime = { version = "0.1.0", path = "../../util/runtime" }
serde_json = "1.0"

[dev-dependencies]
fake-fetch = { version = "0.0.1", path = "../../util/fake-fetch" }
